Wed Sep 17 07:13:04 2003  Chad Elliott  <elliott_c@ociweb.com>

        * tao/Utils/Utils.mpc:

          The best way to set the dependency upon the PorableServer library
          is to inherit from the portableserver base project.  This will
          give you all of the needed dependencies.

Tue Sep 16 20:21:49 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_valuetype/field_ch.cpp (visit_sequence):

          Added code to set the field_node_ member of the sequence
          being visited, which ensures the correct name will be
          generated for anonymous sequence members of valuetypes,
          similarly to the way it works for structs and unions.
          Thanks to Jeff Dugan <jdugan@orincon.com> for sending in
          the example IDL file that uncovered the bug.

Tue Sep 16 12:23:45 2003  Chris Cleeland  <cleeland_c@ociweb.com>

        * tao/Utils/Utils.mpc:

          Corrected dependency on PortableServer library.

Mon Sep 15 16:03:25 MST 2003 Trevor Fields <fields_t@ociweb.com>

        * tao/Utils/Utils.mpc:

          Added missing dependency on PortableServer library.

Mon Sep 15 13:22:37 MST 2003 Trevor Fields <fields_t@ociweb.com>

        * orbsvcs/performance-tests/RTEvent/lib/RTServer_Setup.cpp:

          Fixed passing of ACE_ENV_ARG_PARAMETER to super class.
          It was using the the declaration macro instead of parameter.

Mon Sep 15 15:50:35 2003  Yamuna Krishnamurthy  <yamuna@oomworks.com>

        * tao/RTScheduling/RTScheduler.pidl:
        * tao/RTScheduling/RTSchedulerC.h:
        * tao/RTScheduling/RTSchedulerC.cpp:
        * tests/RTScheduling/Scheduler.h:
        * tests/RTScheduling/Scheduler.cpp:

          Added send_poll operation to Scheduler interface.

Mon Sep 15 11:58:35 MST 2003 Trevor Fields <fields_t@ociweb.com>

        * orbsvcs/performance-tests/RTEvent/lib/Peer_Base.cpp:

          Fixed emulated exception macro.  "ACE_ENV_ARG_PARAMETER", not