@@ -49,15 +49,19 @@ main (int argc, char *argv[])
     if (parse_args (argc, argv) != 0)
       return 1;
 
-		CORBA::Object_var poa_object = orb->resolve_initial_references ("RootPOA" ACE_ENV_ARG_PARAMETER);
+		CORBA::Object_var poa_object =
+      orb->resolve_initial_references ("RootPOA" ACE_ENV_ARG_PARAMETER);
 		ACE_TRY_CHECK;
 
-		PortableServer::POA_var root_poa = PortableServer::POA::_narrow (poa_object.in () ACE_ENV_ARG_PARAMETER);
+		PortableServer::POA_var root_poa =
+      PortableServer::POA::_narrow (poa_object.in () ACE_ENV_ARG_PARAMETER);
 		ACE_TRY_CHECK;
 
-		if (CORBA::is_nil (root_poa.in ())) ACE_ERROR_RETURN ((LM_ERROR," (%P|%t) Nil RootPOA\n"), 1);
+		if (CORBA::is_nil (root_poa.in ()))
+      ACE_ERROR_RETURN ((LM_ERROR," (%P|%t) Nil RootPOA\n"), 1);
 
-		PortableServer::POAManager_var poa_manager = root_poa->the_POAManager (ACE_ENV_SINGLE_ARG_PARAMETER);
+		PortableServer::POAManager_var poa_manager =
+      root_poa->the_POAManager (ACE_ENV_SINGLE_ARG_PARAMETER);
 		ACE_TRY_CHECK;
 
     poa_manager->activate (ACE_ENV_SINGLE_ARG_PARAMETER);
@@ -84,7 +88,10 @@ main (int argc, char *argv[])
 
 		ACE_NEW_RETURN (vt_graph_factory, vt_graph_init_impl, 1);
 
-		returned_factory = orb->register_value_factory (vt_graph_factory->tao_repository_id (), vt_graph_factory ACE_ENV_ARG_PARAMETER);
+		returned_factory =
+      orb->register_value_factory (vt_graph_factory->tao_repository_id (),
+                                   vt_graph_factory
+                                   ACE_ENV_ARG_PARAMETER);
 		ACE_TRY_CHECK;
 	
 		ACE_ASSERT (returned_factory == 0);
@@ -98,7 +105,10 @@ main (int argc, char *argv[])
   
 		ACE_NEW_RETURN (node_factory2, node_init_impl, 1);
 
-		returned_factory = orb->register_value_factory (node_factory2->tao_repository_id (), node_factory2 ACE_ENV_ARG_PARAMETER);
+		returned_factory =
+      orb->register_value_factory (node_factory2->tao_repository_id (),
+                                   node_factory2
+                                   ACE_ENV_ARG_PARAMETER);
 		ACE_TRY_CHECK;
 	
 		ACE_ASSERT (returned_factory == node_factory);
@@ -111,12 +121,15 @@ main (int argc, char *argv[])
 		CORBA::Object_var tmp = orb->string_to_object (ior ACE_ENV_ARG_PARAMETER);
 		ACE_TRY_CHECK;
 
-	  Supports_Test::test_var my_test = Supports_Test::test::_narrow (tmp.in () ACE_ENV_ARG_PARAMETER);
+	  Supports_Test::test_var my_test =
+      Supports_Test::test::_narrow (tmp.in () ACE_ENV_ARG_PARAMETER);
 		ACE_TRY_CHECK;
 
-	  if (CORBA::is_nil (my_test.in ())) ACE_ERROR_RETURN ((LM_DEBUG, "Nil Supports_Test::test obj ref <%s>\n", ior), 1);
+	  if (CORBA::is_nil (my_test.in ()))
+      ACE_ERROR_RETURN ((LM_DEBUG, "Nil Supports_Test::test obj ref <%s>\n", ior), 1);
 
-	  my_test->start ();
+	  my_test->start (ACE_ENV_SINGLE_ARG_PARAMETER);
+    ACE_TRY_CHECK;
 
 		/* Perform test */
 
@@ -131,59 +144,66 @@ main (int argc, char *argv[])
 		ACE_NEW_RETURN (the_vt_graph, vt_graph_impl (3), 1);
 		Supports_Test::vt_graph_var test_vt_graph = the_vt_graph;
 
-    Supports_Test::graph_var test_graph = the_vt_graph->_this (ACE_ENV_SINGLE_ARG_PARAMETER);
+    Supports_Test::graph_var test_graph =
+      the_vt_graph->_this (ACE_ENV_SINGLE_ARG_PARAMETER);
 		ACE_TRY_CHECK;
-		if (CORBA::is_nil (test_graph.in ())) ACE_ERROR_RETURN ((LM_DEBUG, "Nil Supports_Test::graph obj ref\n"), 1);
+		if (CORBA::is_nil (test_graph.in ()))
+      ACE_ERROR_RETURN ((LM_DEBUG, "Nil Supports_Test::graph obj ref\n"), 1);
     the_vt_graph->DefaultValueRefCountBase::_add_ref ();
 
     // At this point, test_vt_graph and test_graph refer to the same object.
-		ACE_ASSERT (test_vt_graph->size () == 3);
+		ACE_ASSERT (test_vt_graph->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 3);
 		my_test->pass_vt_graph_in (test_vt_graph.in () ACE_ENV_ARG_PARAMETER);
 		ACE_TRY_CHECK;
-		ACE_ASSERT (test_vt_graph->size () == 3);
+		ACE_ASSERT (test_vt_graph->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 3);
 
-		ACE_ASSERT (test_graph->size () == 3);
+		ACE_ASSERT (test_graph->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 3);
 		my_test->pass_obj_graph_in (test_graph.in () ACE_ENV_ARG_PARAMETER);
 		ACE_TRY_CHECK;
-		ACE_ASSERT (test_graph->size () == 4);
+		ACE_ASSERT (test_graph->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 4);
 
-    test_vt_graph->add_node ("NEW2");
+    test_vt_graph->add_node ("NEW2" ACE_ENV_ARG_PARAMETER);
+    ACE_TRY_CHECK;
 
-    test_graph->add_node ("NEW3");
+    test_graph->add_node ("NEW3" ACE_ENV_ARG_PARAMETER);
+		ACE_TRY_CHECK;
 
     // After the 'pass_vt_graph_out' call returns, test_vt_graph will refer to
     // a new object.
-    ACE_ASSERT (test_vt_graph->size () == 6);
+    ACE_ASSERT (test_vt_graph->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 6);
     my_test->pass_vt_graph_out (test_vt_graph.out () ACE_ENV_ARG_PARAMETER);
 		ACE_TRY_CHECK;
-		ACE_ASSERT (test_vt_graph->size () == 5);
+		ACE_ASSERT (test_vt_graph->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 5);
 
     // 'test_graph' still refers to the original object, but after the
     // 'pass_obj_graph_out' call returns, it will refer to a new object,
     // residing on the server.
-		ACE_ASSERT (test_graph->size () == 6);
+		ACE_ASSERT (test_graph->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 6);
 		my_test->pass_obj_graph_out (test_graph.out () ACE_ENV_ARG_PARAMETER);
 		ACE_TRY_CHECK;
-		ACE_ASSERT (test_graph->size () == 5);
+		ACE_ASSERT (test_graph->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 5);
 
     // test_vt_graph and test_graph now refer to different objects.
-    test_vt_graph->add_node ("NEW2");
+    test_vt_graph->add_node ("NEW2" ACE_ENV_ARG_PARAMETER);
+    ACE_TRY_CHECK;
 
-    test_graph->add_node ("NEW2");
+    test_graph->add_node ("NEW2" ACE_ENV_ARG_PARAMETER);
+    ACE_TRY_CHECK;
 
-    ACE_ASSERT (test_vt_graph->size () == 6);
+    ACE_ASSERT (test_vt_graph->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 6);
     my_test->pass_vt_graph_inout (test_vt_graph.inout () ACE_ENV_ARG_PARAMETER);
 		ACE_TRY_CHECK;
-		ACE_ASSERT (test_vt_graph->size () == 7);
+		ACE_ASSERT (test_vt_graph->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 7);
 
-		ACE_ASSERT (test_graph->size () == 6);
+		ACE_ASSERT (test_graph->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 6);
 		my_test->pass_obj_graph_inout (test_graph.inout () ACE_ENV_ARG_PARAMETER);
 		ACE_TRY_CHECK;
-		ACE_ASSERT (test_graph->size () == 7);
+		ACE_ASSERT (test_graph->size (ACE_ENV_SINGLE_ARG_PARAMETER) == 7);
 
     }
 
-    my_test->finish ();
+    my_test->finish (ACE_ENV_SINGLE_ARG_PARAMETER);
+    ACE_TRY_CHECK;
 
     /* Shut down */
 
